--- a/views/checkoutSummary.html
+++ b/views/checkoutSummary.html
@@ -1,12 +1,12 @@
-<h2>Your cart</h2>
- 
+﻿<h2>Your cart</h2>
+
 <div ng-controller="cartSummaryController">
- 
+
     <div class="alert alert-warning" ng-show="cartData.length == 0">
         There are no products in your shopping cart.
         <a href="#/products" class="alert-link">Click here to return to the catalogue</a>
     </div>
- 
+
     <div ng-hide="cartData.length == 0">
         <table class="table">
             <thead>
@@ -25,7 +25,9 @@
                     <td class="text-right">{{ (item.price * item.count) | currency}}</td>
                     <td>
                         <button ng-click="remove(item.id)"
-                                class="btn btn-sm btn-warning">Remove</button>
+                                class="btn btn-sm btn-warning">
+                            Remove
+                        </button>
                     </td>
                 </tr>
             </tbody>
@@ -38,7 +40,7 @@
                 </tr>
             </tfoot>
         </table>
- 
+
         <div class="text-center">
             <a class="btn btn-primary" href="#/products">Continue shopping</a>
             <a class="btn btn-primary" href="#/placeorder">Place order now</a>
