--- a/views/productList.html
+++ b/views/productList.html
@@ -1,5 +1,5 @@
-<div class="panel panel-default row" ng-controller="productListCtrl"
-        ng-hide="data.error">
+﻿<div class="panel panel-default row" ng-controller="productListCtrl"
+     ng-hide="data.error">
     <div class="col-xs-3">
         <a ng-click="selectCategory()"
            class="btn btn-block btn-default btn-lg">Home</a>
@@ -11,8 +11,7 @@
     </div>
     <div class="col-xs-8">
         <div class="well"
-             ng-repeat=
-         "item in data.products | filter:categoryFilterFn | range:selectedPage:pageSize">
+             ng-repeat="item in data.products | filter:categoryFilterFn | range:selectedPage:pageSize">
             <h3>
                 <strong>{{item.name}}</strong>
                 <span class="pull-right label label-primary">
@@ -26,8 +25,7 @@
             <span class="lead">{{item.description}}</span>
         </div>
         <div class="pull-right btn-group">
-            <a ng-repeat=
-               "page in data.products | filter:categoryFilterFn | pageCount:pageSize"
+            <a ng-repeat="page in data.products | filter:categoryFilterFn | pageCount:pageSize"
                ng-click="selectPage($index + 1)" class="btn btn-default"
                ng-class="getPageClass($index + 1)">
                 {{$index + 1}}
